Make sure to use the correct reference handler in case of multiple frameworks.